--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://dev-cats.github.io/code-snippets/JetBrainsMono.css");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,500;0,700;1,500;1,700&family=IBM+Plex+Sans:ital,wght@0,500;0,700;1,500;1,700&family=IBM+Plex+Serif:ital,wght@0,500;0,700;1,500;1,700&display=swap');
 
 :root {
-  --bs-font-sans-serif: 'Inter var', sans-serif !important;
-  --bs-font-monospace: 'JetBrains Mono', monospace !important;
+  --bs-font-sans-serif: 'IBM Plex Sans', sans-serif !important;
+  --bs-font-monospace: 'IBM Plex Mono', monospace !important;
   --bs-body-font-weight: 500 !important;
   --bs-btn-border-radius: 0px !important;
   --bs-body-color: #000 !important;
