--- a/main.css
+++ b/main.css
@@ -1,62 +1,11 @@
-@import url("https://dev-cats.github.io/code-snippets/JetBrainsMono.css");
-@import url("https://rsms.me/inter/inter.css");
-
-:root {
-  --bs-body-bg: var(--bs-dark) !important;
-  --bs-body-color: var(--bs-light) !important;
-  --bs-font-sans-serif: 'Inter var', sans-serif !important;
-  --bs-font-monospace: 'JetBrains Mono', monospace !important;
-  --bs-body-font-weight: 500 !important;
-  --bs-btn-border-radius: 0px !important;
-  --bs-dark: #080a0d !important;
-  --bs-dark-rgb: 8, 10, 13 !important;
-  --bs-light: #fff !important;
-  --bs-body-color-rgb: 255, 255, 255 !important;
-}
-
 h1, h2, h3, h4, h5, h6 {
-  font-weight: bold !important;
+	font-family: 'Inter var', sans-serif !important;
 }
 
 p {
-  color: var(--bs-gray-500) !important;
+	font-family: 'Inter var', sans-serif !important;
 }
 
-a {
-  text-decoration: none !important;
-}
-
-a:hover {
-  text-decoration: underline !important;
-  text-decoration-thickness: 13% !important;
-}
-
-::selection {
-  background-color: rgba(13, 110, 253, 0.70);
-  color: var(--bs-body-color);
-}
-
-code {
-  font-family: var(--bs-font-monospace) !important;
-}
-
-.custom-justify {
-  text-align: justify;
-  text-align-last: center;
-  padding: 0 10px 0 10px;
-}
-
-.btn-primary {
-  background-color: var(--bs-light) !important;
-}
-
-.btn-primary:hover {
-  background-color: var(--bs-gray-500) !important;
-}
-
-.btn {
-  border: none !important;
-  color: var(--bs-body-bg) !important;
-  font-weight: var(--bs-body-font-weight) !important;
-  border-radius: 4px !important;
+div {
+	font-family: 'Inter var', sans-serif;
 }
