--- a/main.css
+++ b/main.css
@@ -1,65 +1,218 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+/*dumb.css created by jobcmax*/
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
-	--bg: #101419;
-	--fg: #dee1e6;
-	--links: #70a5eb;
+  --bg: #101419;
+  --mid: #1f2328;
+  --fg: #dee1e6;
+  --primary: #70a5eb;
+  --sans: 'IBM Plex Sans', sans-serif;
+/*  --serif: 'IBM Plex Serif', serif;*/
+/*  --mono: 'IBM Plex Mono', monospace;*/
+/*unused fonts*/
 }
 
 body {
-	display: table-cell;
-    vertical-align: middle;
-	background-color: var(--bg);
-	height: 100%;
-	font-family: 'Fira Sans Condensed', sans-serif;
+  background-color: var(--bg);
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  color: var(--fg);
+  font-family: var(--sans)
 }
 
-td {
-	text-align: center;
-	padding-left: 1em;
-	padding-right: 1em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	color: var(--fg);
-	font-weight: 400;
-}
-
-p {
-	color: var(--fg);
-	font-weight: thin;
-}
-
-div {
-
-}
-
-th {
-	padding: 1em;
-	color: var(--fg);
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 a {
-	color: var(--links);
-	text-decoration: none;
+  color: var(--primary);
+  text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
-html {
-    display: table;
-    margin: auto;
-    height: 100%;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  padding: 0px;
+  line-height: 15px;
 }
 
-.subtext {
-	color: var(--fg);
-	text-align: center;
-	font-size: 1em;
+p {
+  line-height: 1.5em;
 }
 
-.header {
-	text-align: center;
+code {
+  font-size: 1em;
+  font-family: var(--mono);
+  background-color: var(--mid);
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+
+blockquote {
+  border-left: 4px solid var(--primary);
+  margin: 0px;
+  padding-left: 2em;
+  padding: 1em;
+  width: fit-content;
+  background-color: var(--mid);
+}
+
+table {
+  border: 2px solid var(--mid);
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 1em;
+}
+
+td {
+  padding: 0.5em;
+  border: 2px solid var(--mid);
+  border-collapse: collapse;
+}
+
+th {
+  border: 2px solid var(--mid);
+  border-collapse: collapse;
+  padding: 1em;
+  padding-left: 0.5em;
+  text-align: left;
+  color: var(--fg);
+}
+
+img {
+  max-width: 100%;
+  max-height: 100vh;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  display: block;
+  text-align: center;
+}
+
+button {
+  display: block;
+  background-color: var(--primary);
+  border: none;
+  border: 2px solid var(--primary);
+  padding: 0.5em;
+  font-size: 1em;
+  font-family: var(--sans);
+}
+
+button:hover {
+  background-color: var(--bg);
+  color: var(--fg);
+  border: 2px solid var(--primary);
+}
+
+button:active {
+  background-color: var(--mid);
+}
+
+form {
+  margin-top: 1em;
+  padding-bottom: 1em;
+  padding-top: 1em;
+/*  border: 2px solid var(--mid);*/
+}
+
+
+input[type=text] {
+  background-color: var(--mid);
+  border: 0px;
+  outline: none;
+  padding: 0.5em;
+  width: 100%;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  color: var(--fg);
+  font-family: var(--sans);
+  font-size: 1em;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  display: block;
+  background-color: var(--primary);
+  border: none;
+  border: 2px solid var(--primary);
+  font-size: 1em;
+  padding: 0.5em;
+  font-family: var(--sans);
+}
+
+input[type=submit]:hover {
+  background-color: var(--bg);
+  color: var(--fg);
+  border: 2px solid var(--primary);
+}
+
+input[type=submit]:active {
+  background-color: var(--mid);
+}
+
+select {
+  background-color: var(--mid);
+  padding: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  border: none;
+  font-family: var(--sans);
+  color: var(--fg);
+  font-size: 1em;
+}
+
+textarea {
+  background-color: var(--mid);
+  width: 100%;
+  border: none;
+  font-family: var(--sans);
+  color: var(--fg);
+  outline: none;
+  padding: 2em;
+  height: 10em;
+  font-size: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.content {
+  padding-top: 2em;
+  margin: 0 auto;
+  width: 55%;
+}
+
+.center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.links {
+  text-align: center;
+}
+
+small {
+  font-size: 0.5em;
+  font-weight: 400;
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .content {
+    width: 80%;
+  }
 }
